--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="col-12 col-md-6 sm-4 mb-3">	
 				<div class="profile">
 					<h1 class= "name mt-5"> Abisha Ghimire</h1>
-					<img class= "image mt-5 mb-5" src= "photo.jpeg" height= 400 >	
+					<img class= "image mt-5 mb-5" src= "image.jpeg" height= 400 >	
 					</div>
 			</div>
 		
