--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	
 
 	
-	<footer class="border-top footer text-muted bg-dark">
+	<footer class="border-top footer footer-expand-sm text-muted bg-dark">
 	<div class="row text-center">
 		<div class="col-12 col-sm-3 mt-4 mb-4">
 			<i class="fa-sharp fa-solid fa-phone fa-2xl" style="color: #3B71CA;"></i>
