--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
 			</div>
 
 			<div class="projects"> 
+				<img src="./image/food.png" width=200 > <br>
+				<a  href="yumify.html" class="btn btn2" >Yumify</a><br>
+			</div>
+
+			<div class="projects"> 
 				<img src = "samosa-selector/image.png" width= 135> </br>
 				<a href = "samosaselector.html" class="btn btn2" > Samosa selector</a></br>
 			</div>
