--- a/laptops.html
+++ b/laptops.html
@@ -5,7 +5,7 @@
 	<title>Laptops 'R Us</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
 	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" /> 
-	<link rel="stylesheet" href="site.css" /> 
+	<link rel="stylesheet" href="laptops.css" /> 
 	
 	<link rel="stylesheet" crossorigin="anonymous" 
  href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
