add estateEdge and yumify

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
 
 		<div class="project-container">
 			<div class="projects"> 
+				<img class="tic" src = "image/realestate.png" width= 135><br>
+				<a  href="estateEdge.html" class="btn btn2" >EstateEdge</a><br>
+			</div>
+
+			<div class="projects"> 
 				<img class="tic" src = "https://play-lh.googleusercontent.com/zPxLgj5nvl20ahJV7aFC6S5mD8kii5CEEDj25j1P9CYAfXL9sdDuO-8eES0r4DhJHrU" width= 135><br>
 				<a  href="tictactoe.html" class="btn btn2" >Tic-tac-toe</a><br>
 			</div>
@@ -90,7 +95,7 @@
 			</div>
 
 			<div class="projects"> 
-				<img src="./image/food.png" width=200 > <br>
+				<img src="./image/food.png" width=150 > <br>
 				<a  href="yumify.html" class="btn btn2" >Yumify</a><br>
 			</div>
 
