--- a/websites.html
+++ b/websites.html
@@ -19,16 +19,17 @@
 			<nav>
 				<img src="image/logo.png" class="logo">
 				<ul>
-					<li><a href="index.html #header"> Home</a></li>
-					<li><a href="index.html #About"> About</a></li>
-					<li><a href="index.html #Myprojects"> My Projects</a></li>
-					<li><a href="index.html #Contactme"> Contact</a></li>
+					<li><a href="index.html#header"> Home</a></li>
+					<li><a href="index.html#About"> About</a></li>
+					<li><a href="index.html#Myprojects"> My Projects</a></li>
+					<li><a href="index.html#Contactme"> Contact</a></li>
 				</ul>
 			</nav>
             <h2> My websites</h2>
             <ul>
                 <li> <a  href="stockmarket.html" class="btn btn2" >stockmarket</a></li>
                 <li> <a  href="laptops.html" class="btn btn2" >laptops</a></li>
+				<li> <a href = "foodtruck.html" class = "btn btn2">Food Truck  </a> </li>
             </ul>
             
         </div>
