updated resume/Projects css

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 					<li><span>2022 - 2025</span><br>
 					<li>Missouri State University</li>
 					<li> B.Sc. Computer Science</li>
+					<li> Minor in Mathematics and Business Analytics</li>
+
 				</ul>
 			</div>
 			</p>
@@ -81,8 +83,8 @@
 		<div class="project-container">
 			<div class="projects"> 
 				<div class="front">
-					<img class="tic" src = "image/realestate.png" width= 200><br>
-					<a  href="estateEdge.html" class="btn btn2" >EstateEdge</a><br>
+					<img class="tic" src = "image/realestate.png" >
+					<a  href="estateEdge.html" class="btn btn2" >EstateEdge</a>
 				</div>
 				<div class="back">
 					<p>Developed a full-stack Real Estate web app with React, Express.js, and MongoDB, enabling users to browse and save property listings. Integrated real-time chat using Socket.io and streamlined database operations with Prisma.</p>
@@ -92,8 +94,8 @@
 
 			<div class="projects"> 
 				<div class="front">
-					<img class="tic" src = "image/Ticketbooking.png" width= 200><br>
-					<a  href="https://banquet-ticket-booking.onrender.com/" class="btn btn2" >Ticket Booking</a><br>
+					<img class="tic" src = "image/Ticketbooking.png" >
+					<a  href="https://banquet-ticket-booking.onrender.com/" class="btn btn2" >Ticket Booking</a>
 				</div>
 				<div class="back">
 					<p>A ticket booking web app enabling users to select seats, book banquet tickets, and make secure payments via Stripe, with automated email notifications for booking and transaction details.</p>
@@ -102,8 +104,8 @@
 
 			<div class="projects"> 
 				<div class="front">
-					<img class="tic" src = "https://play-lh.googleusercontent.com/zPxLgj5nvl20ahJV7aFC6S5mD8kii5CEEDj25j1P9CYAfXL9sdDuO-8eES0r4DhJHrU" width= 200><br>
-					<a  href="tictactoe.html" class="btn btn2" >Tic-tac-toe</a><br>
+					<img class="tic" src = "https://play-lh.googleusercontent.com/zPxLgj5nvl20ahJV7aFC6S5mD8kii5CEEDj25j1P9CYAfXL9sdDuO-8eES0r4DhJHrU" ><br>
+					<a  href="tictactoe.html" class="btn btn2" >Tic-tac-toe</a>
 				</div>
 				<div class="back">
 					<p>A classic Tic-Tac-Toe game built with HTML, CSS, and JavaScript, allowing two players to compete in an interactive and user-friendly interface. The game tracks player turns and declares the winner or a draw at the end of each match.</p>
@@ -113,7 +115,7 @@
 			
 			<div class="projects"> 
 				<div class="front">
-					<img src="https://th.bing.com/th/id/R.fc0fdac2ae31f27894059464741880e1?rik=vJjNEzN4UzOGBA&riu=http%3a%2f%2fwww.pngmart.com%2ffiles%2f12%2fSun-And-Cloud-PNG-HD.png&ehk=fCJ8sYgh8dg6MB3a%2beuiKPvdrudVzHBQd1q%2b%2fDWbU1E%3d&risl=&pid=ImgRaw&r=0" width=200 > <br>
+					<img src="https://th.bing.com/th/id/R.fc0fdac2ae31f27894059464741880e1?rik=vJjNEzN4UzOGBA&riu=http%3a%2f%2fwww.pngmart.com%2ffiles%2f12%2fSun-And-Cloud-PNG-HD.png&ehk=fCJ8sYgh8dg6MB3a%2beuiKPvdrudVzHBQd1q%2b%2fDWbU1E%3d&risl=&pid=ImgRaw&r=0" > <br>
 					<a  href="weatherindex.html" class="btn btn2" >Weather App</a><br>
 				</div>
 				<div class="back">
@@ -125,8 +127,8 @@
 
 			<div class="projects"> 
 				<div class="front">
-					<img src="./image/food.png" width=200 > <br>
-					<a  href="yumify.html" class="btn btn2" >Yumify</a><br>
+					<img src="./image/food.png" > 
+					<a  href="yumify.html" class="btn btn2" >Yumify</a>
 				</div>
 				
 				<div class="back">
@@ -136,8 +138,8 @@
 
 			<div class="projects"> 
 				<div class="front">
-					<img src = "samosa-selector/image.png" width= 200> </br>
-					<a href = "samosaselector.html" class="btn btn2" > Samosa selector</a></br>
+					<img src = "samosa-selector/image.png"> 
+					<a href = "samosaselector.html" class="btn btn2" > Samosa selector</a>
 				</div>
 
 				<div class="back">
@@ -147,8 +149,8 @@
 
 			<div class="projects"> 
 				<div class="front">
-					<img src = "bytelearn/assets/bytelearn.png" width= 200> </br>
-					<a href = "bytelearn.html" class="btn btn2" > ByteLearn</a></br>
+					<img src = "bytelearn/assets/bytelearn.png" width= 200> 
+					<a href = "bytelearn.html" class="btn btn2" > ByteLearn</a>
 				</div>
 
 				<div class="back">
